<resources>
    <string name="app_name">视频营销</string>
    <string name="login_name">请输入用户名</string>
    <string name="login_password">请输入密码</string>
    <string name="login_button">登录</string>
    <string name="title_activity_main_page">MainPageActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edt_search_hint">搜索店铺</string>
    <string name="title_activity_call_in">CallInActivity</string>
    <string name="btn_main_shop">商\t铺</string>
    <string name="btn_main_order">订\t单</string>
    <string name="btn_item_shop_look">视频看菜</string>
    <string name="tv_item_shop_name_default">武汉苹果批发店</string>
    <string name="tv_item_shop_intro_default">本店主要经营苹果、香蕉等</string>

    <string name="tv_item_main_type_fruit">水果</string>
    <string name="tv_item_sub_type_apple">苹果</string>
    <string name="tv_calling">正在呼叫...</string>
    <string name="tv_waiting_accept">请求视频通话</string>
    <string name="title_activity_order_list">OrderListActivity</string>
    <string name="title_activity_video">视频通话</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_main_shop">商铺</string>
    <string name="tv_main_orderlist">订单</string>
    <string name="tv_my_orders">我的订单</string>
    <string name="order_name">名称：{name}</string>
    <string name="order_amount">数量：{amount}</string>
    <string name="order_amount_unit">数量：{amount}{unit}</string>
    <string name="order_price">总价：¥{price}</string>
    <string name="order_place_time">下单时间:{place_time}</string>
    <string name="tv_buyer_name">客户姓名:{buyer_name}</string>
    <string name="tv_shop_name">商店:{shop_name}</string>
    <string name="order_id">订单号：{orderid}</string>
    <string name="tv_delivered">已发货</string>
    <string name="tv_payed">已付款</string>
    <string name="tv_collected">已收款</string>
    <string name="tv_cancel">取消订单</string>
    <string name="tv_forgetpwd">忘记密码</string>
    <string name="tv_version">版本1.0</string>
    <string name="edt_main_search_hint">搜索店铺</string>
    <string name="btn_video_silent">静音</string>
    <string name="btn_video_exit">退出</string>
    <string name="tv_shoppingcar_title">购物车</string>
    <string name="tv_shopping_car_number">共{number}件,当前第{index}件</string>
    <string name="tv_product_name">品名：{name}</string>
    <string name="tv_number">数量：{number}</string>
    <string name="tv_unit">框</string>
    <string name="tv_total_price">总价：¥{price}元</string>
    <string name="network_failed">连接服务器失败，请检查您的网络</string>
    <string name="operation_failed">操作失败，请稍后再试</string>
    <string name="toast_product_name">请填写商品名称！</string>
    <string name="toast_product_amount">请填写正确的商品数量！</string>
    <string name="toast_product_unit">请填写商品单位！</string>
    <string name="toast_product_price">请填写正确的商品总价！</string>
    <string name="toast_no_orders">没有更多订单了</string>
    <string name="load_more">加载更多...</string>
    <string name="tv_commit_who">买方{buyer_name}已经提交购物车</string>
    <string name="tv_commit_amout">商品数量：{amount}</string>
    <string name="tv_commit_totalprice">总价格：¥{price}</string>
    <string name="tv_index_initdata">共1件,当前第1件</string>
    <string name="tv_accept_product">已收货</string>
    <string name="tv_product_already_added">该商品已添加！</string>

</resources>
