<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nobugs.team.shopping.ui.activity.OrderDetailsActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/cff0000"
        android:gravity="center"
        android:text="@string/tv_my_orders"
        android:textColor="@android:color/white" />

    <include
        layout="@layout/item_order_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_delivered"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_red_shape"
            android:textColor="@android:color/white"
            android:text="@string/tv_delivered"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btn_payed"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/bg_btn_red_shape"
            android:textColor="@android:color/white"
            android:text="@string/tv_payed"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btn_collected"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/bg_btn_red_shape"
            android:textColor="@android:color/white"
            android:text="@string/tv_collected"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btn_accepted"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/bg_btn_red_shape"
            android:textColor="@android:color/white"
            android:text="@string/tv_accept_product"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btn_canceled"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/bg_btn_red_shape"
            android:textColor="@android:color/white"
            android:text="@string/tv_cancel"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>
