<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >


    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/edit_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/login_name"
        android:layout_marginTop="84dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_password"
        android:layout_below="@+id/edit_name"
        android:layout_centerHorizontal="true"
        android:hint="@string/login_password"
        android:layout_marginTop="98dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login_button"
        android:id="@+id/login_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        />
</RelativeLayout>
